[gd_scene load_steps=6 format=3 uid="uid://d0278h0ls8o7s"]

[ext_resource type="TileSet" uid="uid://bkmbc46tqiseo" path="res://World/TileSet.tres" id="1_drvct"]
[ext_resource type="Script" uid="uid://cnih73bsrhl5e" path="res://TileObjects/Being/being.gd" id="2_y2rdr"]
[ext_resource type="Script" uid="uid://o100etfwx7q" path="res://TileObjects/Being/health.gd" id="3_j6bbd"]
[ext_resource type="Theme" uid="uid://bulxdobu4kdig" path="res://UI/main_theme.tres" id="4_7um8h"]
[ext_resource type="Texture2D" uid="uid://dwjc6jemdqfsa" path="res://UI/Art/Shield.png" id="5_lew6t"]

[node name="Being" type="Node2D" node_paths=PackedStringArray("movement_timer", "health")]
script = ExtResource("2_y2rdr")
movement_timer = NodePath("Movement Timer")
health = NodePath("Health")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
tile_map_data = PackedByteArray(0, 0, 255, 255, 255, 255, 1, 0, 26, 0, 0, 0, 0, 0)
tile_set = ExtResource("1_drvct")

[node name="Movement Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Health" type="Node2D" parent="."]
script = ExtResource("3_j6bbd")
current_health = 1

[node name="ShieldHBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
offset_left = -17.0
offset_top = -27.0
offset_right = 83.0
offset_bottom = 3.0
scale = Vector2(0.2, 0.2)

[node name="ShieldLabel" type="Label" parent="ShieldHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_7um8h")
theme_override_font_sizes/font_size = 29
text = "SH"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="ShieldHBox"]
self_modulate = Color(0.225542, 0.229361, 0.248938, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_lew6t")
expand_mode = 2
stretch_mode = 4

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
offset_left = -20.0
offset_top = 1.0
offset_right = 80.0
offset_bottom = 21.0
scale = Vector2(0.25, 0.25)
max_value = 1.0
value = 0.5
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthBar"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_7um8h")
theme_override_font_sizes/font_size = 16
text = "HP/MAX"
horizontal_alignment = 1
vertical_alignment = 1
